<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="skybox.com.scmtv.buscar_cliente">




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

    <EditText
        android:id="@+id/editText_buscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit2"
        android:buttonTint="@color/ic_launcher_background"
        android:gravity="center"
        android:hint="@string/ingresexCodigo"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_buscar2"
        android:drawablePadding="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <TextView
        android:id="@+id/textView_seleccioneunaopcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Seleccione_radiobuttons"
        android:textColor="@color/ic_launcher_background"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_seleccioneunaopcion">

        <RadioButton
            android:id="@+id/radiobuttonCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:buttonTint="@color/ic_launcher_background"
            android:checked="true"
            android:text="Codigo"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radiobuttonCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/ic_launcher_background"
            android:checked="false"
            android:text="Cedula"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radiobuttonNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/ic_launcher_background"
            android:checked="false"
            android:text="Nombre"
            android:textSize="18sp" />


    </RadioGroup>

    <Button
        android:id="@+id/button_buscar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/ic_launcher_background"
        android:gravity="center"
        android:text="@string/buscar_cliente"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText_buscar" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/button_buscar">

        <TextView
            android:id="@+id/tvCodigo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="Codigo"
            android:textColor="@color/ic_launcher_background"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombreyApellidos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/tvCodigo"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="Nombres y Apellidos"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="11sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/tvNombreyApellidos"
            android:layout_weight="3"
            android:gravity="center"
            android:text="Telefono"
            android:textColor="@color/ic_launcher_background"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEstado"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/tvTelefono"
            android:layout_weight="3"
            android:gravity="center"
            android:text="Estado"
            android:textColor="@color/ic_launcher_background"
            android:textSize="11sp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:id="@+id/view"

        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.511"></LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>